[package]
name = "ccx-finery-markets"
version = "0.4.0"
authors = ["CCX-API Library developers <irbis.labs@gmail.com>"]
edition = "2021"

[features]
default = ["with_network"]
with_network = [
    "actix",
    "actix-codec",
    "actix-http",
    "actix-rt",
    "actix-tls",
    "awc",
    "futures",
    "tokio-socks",
    "webpki-roots",
    "ccx-api-lib/with_network",
]
experimental = []

[dependencies]
actix = { version = "0.13", optional = true }
actix-codec = { version = "0.5", optional = true }
actix-http = { version = "3", optional = true, features = ["rustls"] }
actix-rt = { version = "2", optional = true }
actix-tls = { version = "3", optional = true }
awc = { version = "3", optional = true, features = ["rustls"] }
base64 = "0.21"
chrono = { version = "0.4", default_features = false, features = ["clock"] }
bytes = "1"
enum-iterator = "1"
futures = { version = "0.3", optional = true }
hmac = "0.12"
log = "0.4"
serde = { version = "1", features = ["derive"] }
serde_repr = "0.1"
serde_json = "1"
serde_tuple = "0.5"
sha2 = "0.10"
thiserror = "1"
tokio-socks = { version = "0.5", optional = true }
url = { version = "2", features = ["serde"] }
webpki-roots = { version = "0.25", optional = true }

ccx-api-lib = { path = "../../util/lib" }

[dev-dependencies]
env_logger = "0.10"
dotenv = "0.15"
ccx-finery-markets-examples-util = { path = "examples/util" }
