[package]
name = "ccx-gate"
version = "0.4.0"
authors = ["CCX-API Library developers <irbis.labs@gmail.com>"]
edition = "2021"

[features]
default = ["with_network"]
with_network = [
    "ccx-api-lib/with_network",
]
with_diesel = []

[dependencies]
chrono = { version = "0.4", default-features = false, features = ["clock"] }
derive_more = "0.99"
log = "0.4"
futures = "0.3"
hex = "0.4"
hmac = "0.12"
rand = "0.8"
rust_decimal = "1"
rust_decimal_macros = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
smallvec = { version = "1", features = ["serde"] }
smart-string = "0.1.3"
thiserror = "1"
url = { version = "2", features = ["serde"] }
uuid = { version = "0.8", features = ["serde", "v4"] }

ccx-api-lib = { path = "../../util/lib" }

[dev-dependencies]
actix-rt = "2"
dotenvy = "0.15"
env_logger = "0.10"
tokio = { version = "1", features = ["macros"] }
serde_plain = "1"
