[package]
name = "ccx-kraken"
version = "0.3.0"
authors = ["CCX-API Library developers <irbis.labs@gmail.com>"]
edition = "2018"

[features]
default = ["with_network"]
with_network = [
    "actix",
    "actix-http",
    "actix-rt",
    "actix-tls",
    "actix-web",
    "actix-web-actors",
    "awc",
    "ccx-api-lib/with_network",
    "rustls",
    "webpki-roots",
]
experimental = []

[dependencies]
actix = { version = "0.13", optional = true }
actix-http = { version = "3", optional = true, features = ["rustls"] }
actix-rt = { version = "2", optional = true }
actix-tls = { version = "3", optional = true }
actix-web = { version = "4", features = ["rustls"], optional = true }
actix-web-actors = { version = "4", optional = true }
awc = { version = "3", optional = true, features = ["rustls"] }
base64 = "0.13"
chrono = "0.4"
log = "0.4"
futures = "0.3"
hmac = "0.10"
rust_decimal = "1"
rustls = { version = "0.20", optional = true }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_repr = "0.1"
erased-serde = "0.3"
serde_urlencoded = "0.7"
sha2 = "0.9"
string_cache = "0.8"
thiserror = "1"
url = { version = "2", features = ["serde"] }
webpki-roots = { version = "0.22", optional = true }

ccx-api-lib = { path = "../../util/lib" }

[dev-dependencies]
env_logger = "0.8"
dotenv = "0.15"
ccx-kraken-examples-util = { path = "examples/util" }
