[package]
name = "ccx-api-lib"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["with_network"]
with_network = [
    "awc",
#    "actix",
#    "actix-codec",
    "actix-connect",
    "actix-http",
    "actix-service",
#    "actix-web",
#    "actix-web-actors",
#    "rustls",
#    "webpki-roots",
    "tokio-socks",
]

[dependencies]
actix-connect = { version = "2.0", optional = true }
actix-http = { version = "2.0", optional = true }
actix-service = { version = "1.0.6", optional = true }
awc = { version = "2.0", optional = true }
rust_decimal = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_urlencoded = "0.7"
string_cache = "0.8"
thiserror = "1"
tokio-socks = { version = "0.2.2", optional = true }
url = { version = "2", features = ["serde"] }

[dependencies.exchange_sign_hook]
git = "https://github.com/timaghostov/exchange_sign_hook.git"
