[package]
name = "ccx-api-lib"
version = "0.4.0"
authors = ["CCX-API Library developers <irbis.labs@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []
with_network = [
    "actix-http",
    "actix-rt",
    "actix-service",
    "actix-tls",
    "awc",
    "rustls",
    "tokio",
    "tokio-socks",
    "webpki-roots",
]

[dependencies]
actix-http = { version = "3", optional = true }
actix-service = { version = "2", optional = true }
actix-rt = { version = "2", optional = true }
actix-tls = { version = "3", optional = true }
awc = { version = "3", features = ["rustls"], optional = true }
base64 = "0.21"
rust_decimal = "1"
rustls = { version = "0.20", optional = true }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_urlencoded = "0.7"
string_cache = "0.8"
thiserror = "1"
tokio = { version = "1", optional = true, default-features = false }
tokio-socks = { version = "0.5", optional = true }
url = { version = "2", features = ["serde"] }
webpki-roots = { version = "0.23", optional = true }
